--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
   padding: 2rem;
   text-align: center;
 
+
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: violet ;
 
   
   font-synthesis: none;
